Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38609

Master should not fragment replication events based on slave_max_allowed_packet

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 12.3
    • 12.3.1
    • Replication
    • None
    • Not for Release Notes
    • Q1/2026 Server Maintenance

    Description

      MDEV-32570: Fragment ROW replication events larger than max_packet_size

      Currently,When the master encounters a Rows_log_event larger than the slave’s configured slave_max_allowed_packet, it fragments that row event into multiple partial events—each fitting within the allowed size.

      However, slave_max_allowed_packet is strictly a slave-side setting and is generally not known to the master. In a typical topology, the master has no reliable way to determine the value configured on one or more replicas.

      Fragmentation of replication events should be determined solely by master-side configuration, not by variables defined on the replica.

      To address this, the fragmentation threshold should be based on a variable available on the master, for example:

      1. Reuse the existing max_allowed_packet setting on the master, or
      2. Introduce a new dedicated master-side variable specifically for controlling replication event fragmentation.

      Additionally, a requirement should be documented and enforced that:

      The value of slave_max_allowed_packet on the slave must be greater than or equal to the master’s fragmentation threshold (max_allowed_packet or the new variable), so that large updates using row-based replication do not cause replication failures.

      Attachments

        Issue Links

          Activity

            People

              bnestere Brandon Nesterenko
              Deepthi ES Deepthi Eranti Sreenivas
              Brandon Nesterenko Brandon Nesterenko
              Deepthi Eranti Sreenivas Deepthi Eranti Sreenivas
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d Time Not Required
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.