MDEV-38609: Master should not fragment replication events based on slave_max_allowed_packet

This commit adds a new variable, binlog_row_event_fragment_threshold,
to define the threshold at which Partial_row_log_events are used
(rather than re-using slave_max_allowed_packet).

TODO: Re-write main git commit message to convey this